style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chivo&family=Forum&display=swap');

@keyframes bounce {
  0%, 20%, 60%, 100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }

  40% {
    -webkit-transform: translateY(-20px);
    transform: translateY(-20px);
  }

  80% {
    -webkit-transform: translateY(-10px);
    transform: translateY(-10px);
  }
}

html, body {
  margin: 0;
  padding: 0;
  background-color: #E7E6E6;
}

.header-main {
  display: flex;
  justify-content: space-around;
  padding-bottom: 40px;
  text-decoration: none;
}
.header-main-text {
  font-family: 'Forum', cursive;
  padding-top: 40px;
  font-size: 40px;
  color: #4E4E4E;
  text-decoration: none;
}


.nav-main {
text-decoration: none;
font-family: 'IBM Plex Mono', monospace;
padding-top: 60px;
list-style: none;
display: flex;
color: #4E4E4E;
padding-left: 30px;
}


.hvr-float {
  color: #4E4E4E;
  text-decoration: none;
  display: inline-block;
  vertical-align: middle;
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  transition-duration: 0.3s;
  transition-property: transform;
  transition-timing-function: ease-out;
}

.hvr-float:hover,
.hvr-float:focus,
.hvr-float:active {
  transform: translateY(-8px);
  color: #4E4E4E;
}

.nav-main-text {
  padding-left: 70px;
  text-decoration: none;
  color: #4E4E4E;
  
}

.reg-text-main {
  text-decoration: none;
  font-family: 'IBM Plex Mono', monospace;
  font-size: 15px;
}

.body-main {
  display:flex;

}
.header-main-img {
  width: 80vh;
  padding-left: 150px;
}
.body-main-text {
  font-family: 'IBM Plex Mono', monospace;
  padding-right: 80px;
}

.github-logo {
  width: 50px;

}
.linkedin-logo {
  width: 50px;
  padding-left: 10px;
}

.insta-logo {
  width: 50px;
  padding-left: 10px;
}

.page-buttons {
  text-align: center;
  padding-top: 50px;
}

.code-button {
  background-color: #BCCCD6;
  color: white;
  border: none;
  padding: 10px 80px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  cursor: pointer;
  border-radius: 8px;
  font-family: 'IBM Plex Mono', monospace;
 display: inline-block;
 margin-right: 40px;
}

.design-button {
  background-color: #CADBCC;
  color: white;
  border: none;
  padding: 10px 80px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  cursor: pointer;
  border-radius: 8px;
  font-family: 'IBM Plex Mono', monospace;
  display: inline-block;
  
}

